5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1674_1101.log
== TEST (2019-04-30 21:06:56) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="C") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="C") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- ERROR:
File "XXXX", line 13
    if(tipo=="R") and (consumo=500):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:08:56) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="C") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="C") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- ERROR:
File "XXXX", line 13
    if(tipo=="R") and (consumo=500):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:09:58) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="C") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="C") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 21:10:43) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="C") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="C") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.174276
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:11:06) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="C") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="C") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:12:22) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="C") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="C") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:12:57) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="C") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="C") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:13:21) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="C") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="C") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:14:10) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="C") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="C") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:14:46) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="C") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="C") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:16:01) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="C") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="C") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 21:16:44) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="I") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="I") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.19217
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:16:53) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="I") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="I") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:17:43) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="I") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="I") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 21:18:01) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="I") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="I") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.130352
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 21:20:03) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="I") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="I") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.185914
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:20:08) 
-- CODE:
consumo = float(input("digite o valor: "))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="I") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="I") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 21:21:22) 
-- CODE:
consumo = float(input("digite o valor:"))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo > 0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="I") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="I") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.141131
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 21:22:32) 
-- CODE:
consumo = float(input("digite o valor:"))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo>0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="I") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="I") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.115638
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:47:20) 
-- CODE:
consumo = float(input("digite o valor:"))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo>0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="I") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="I") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.212597
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:47:26) 
-- CODE:
consumo = float(input("digite o valor:"))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kwh e tipo", tipo)

if(consumo>0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="I") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="I") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:50:11) 
-- CODE:
consumo = float(input("digite o valor:"))
tipo = input("digite o tipo: r, i ou c").upper()

residencial = round(consumo*(0.44), 2)
residencial1 = round(consumo*(0.65), 2)
comercial = round(consumo*(0.55), 2)
comercial1 = round(consumo*(0.60), 2)
industrial = round(consumo*(0.55), 2)
industrial1 = round(consumo*(0.60), 2)
print("Entradas:", consumo, "kWh e tipo", tipo)

if(consumo>0):
	if(tipo=="R") and (consumo<=500):
		print("Valor total:", "R$", residencial)
	elif(tipo=="R") and (consumo>500):
		print("Valor total:", "R$", residencial1)
	elif(tipo=="C") and (consumo<=1000):
		print("Valor total:", "R$", comercial)
	elif(tipo=="C") and (consumo>1000):
		print("Valor total:", "R$", comercial1)
	elif(tipo=="I") and (consumo<=5000):
		print("Valor total:", "R$", industrial)
	elif(tipo=="I") and (consumo>5000):
		print("Valor total:", "R$", industrial1)
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.188302
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
